--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-styledown",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A gulp.js plugin for styledown.",
   "main": "index.js",
   "scripts": {
@@ -15,9 +15,10 @@
   "author": "st44100 <st44100@gmail.com>",
   "license": "WTFPL",
   "dependencies": {
+    "gulp": "^3.9.1",
     "gulp-util": "latest",
     "merge": "^1.1.3",
-    "styledown": "file:../styledown",
+    "styledown": "github:PhilippeVay/styledown#bugfix/working-dependencies",
     "through": "^2.3.4",
     "through2": "2.x"
   },
