--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gulp-styledown",
+  "name": "@philippevay/gulp-styledown",
   "version": "0.0.3",
   "description": "A gulp.js plugin for styledown.",
   "main": "index.js",
@@ -18,7 +18,7 @@
     "gulp": "^3.9.1",
     "gulp-util": "latest",
     "merge": "^1.1.3",
-    "styledown": "github:PhilippeVay/styledown#bugfix/working-dependencies",
+    "@philippevay/styledown": "^1.0.6",
     "through": "^2.3.4",
     "through2": "2.x"
   },
